# ari-backup

./: .bazelignore  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README  README.md  README.mediawiki  Vagrantfile.example  WORKSPACE  setup.py  style_test.py
ari_backup/: BUILD  BUILD.bazel  DEPENDENCIES  __init__.py  logger.py  lvm.py  lvm_test.py  rdiff_backup_wrapper.py  rdiff_backup_wrapper_test.py  requirements_lock.txt  settings.py  style_test.py  test_lib.py  test_requirements_lock.txt  workflow.py  workflow_test.py  zfs.py  zfs_test.py
devel/ansible/roles/dev/tasks/: main.yml
distribution_packages/gentoo/app-backup/ari-backup/: ari-backup-version.ebuild
distribution_packages/rpm/: ari-backup.change_default_destination.patch  ari-backup.spec
include/cron/: ari-backup
include/etc/ari-backup/: ari-backup.conf.yaml
include/etc/ari-backup/jobs.d/: ari-backup-local-demo  ari-backup-local-lvm-demo  ari-backup-remote-demo  ari-backup-remote-lvm-demo
tests/: tests.py
