"""Workflow engine for automated backups."""
module(name = "ari_backup")

bazel_dep(name = "rules_python", version = "1.0.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//ari_backup:requirements_lock.txt",
)
use_repo(pip, "pip")

pip.parse(
    hub_name = "pip_test",
    python_version = "3.11",
    requirements_lock = "//ari_backup:test_requirements_lock.txt",
)
use_repo(pip, "pip_test")