load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "logger",
    srcs = ["logger.py"],
)

py_library(
    name = "workflow",
    srcs = ["workflow.py"],
    deps = [
        ":logger",
        requirement("pyyaml"),
    ],
)

py_test(
    name = "workflow_test",
    size = "small",
    srcs = ["workflow_test.py"],
    deps = [
        ":test_lib",
        ":workflow",
        requirement("absl_py"),
    ],
)

py_library(
    name = "rdiff_backup_wrapper",
    srcs = ["rdiff_backup_wrapper.py"],
    deps = [
        ":workflow",
        requirement("absl_py"),
    ],
)

py_test(
    name = "rdiff_backup_wrapper_test",
    size = "small",
    srcs = ["rdiff_backup_wrapper_test.py"],
    deps = [
        ":rdiff_backup_wrapper",
        ":test_lib",
        requirement("absl_py"),
    ],
)

py_library(
    name = "lvm",
    srcs = ["lvm.py"],
    deps = [
        ":rdiff_backup_wrapper",
        requirement("absl_py"),
    ],
)

py_test(
    name = "lvm_test",
    size = "small",
    srcs = ["lvm_test.py"],
    deps = [
        ":lvm",
        ":test_lib",
        ":workflow",
        requirement("absl_py"),
    ],
)

py_library(
    name = "zfs",
    srcs = ["zfs.py"],
    deps = [
        ":lvm",
        ":workflow",
        requirement("absl_py"),
    ],
)

py_test(
    name = "zfs_test",
    size = "small",
    srcs = ["zfs_test.py"],
    deps = [
        ":test_lib",
        ":zfs",
        requirement("absl_py"),
    ],
)

py_library(
    name = "test_lib",
    srcs = ["test_lib.py"],
    deps = [
        requirement("absl_py"),
    ],
)

filegroup(
    name = "src_files",
    srcs = glob(["*.py"]),
    visibility = ["//:__pkg__"],
)
